# Projects

./: .gitignore  README.md  pyproject.toml
ai-office-monitor/linux/: README.md  gpu_monitor.py  process_detector.py  requirements.txt  server.py
ai-office-monitor/linux/static/: app.js  index.html  manifest.json  office.js  scene.js  style.css  sw.js  worker.js
smaglinski-site/: .gitignore  README.md  package-lock.json  package.json
smaglinski-site/.openai/: hosting.json
smaglinski-site/app/: assistant-knowledge.ts  components.tsx  family-chat.tsx  globals.css  home-tabs.tsx  layout.tsx  opengraph-image.tsx  page.tsx  profile-tabs.tsx  site-data.ts  theme-control.tsx  use-tabs.ts  warm.css
smaglinski-site/app/[person]/: page.tsx
smaglinski-site/app/api/assistant/: route.ts
smaglinski-site/tests/: rendered-html.test.mjs  site-content.test.mjs
src/ai_voicechanger/: __init__.py  audio.py  cli.py  config.py  converters.py  device_labels.py  stt.py  ui.py
tests/: test_config.py  test_converters.py  test_ui_helpers.py
