[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-voicechanger"
version = "0.1.0"
description = "Realtime-oriented voice changer scaffold for RVC .pth/.index models, microphone input, optional speech-to-text, and virtual audio output."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Random Projects" }]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.24",
  "sounddevice>=0.4.6",
  "soundfile>=0.12.1",
]

[project.optional-dependencies]
stt = ["faster-whisper>=1.0.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
ai-voicechanger = "ai_voicechanger.cli:main"
ai-voicechanger-gui = "ai_voicechanger.ui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
